css/mobile.css
#documentation-menu {
    display: none;
}

#hamburger-menu, #mobile-menu a, #mobile-menu li, #mobile-menu ul {
    display: block;
}

.maingrid {
    display: grid;
    grid-template-columns:1fr;
    grid-template-areas:
        "header"
        "content"
        "footer";
    grid-template-columns: unset;
    grid-gap: 1.0em;
}

#mobile-menu {
    background: var(--pico-background-color);
    z-index: 2;
    justify-content: unset;
    flex-direction: column;
    width: 100vw;
    height: 100%;
    padding: 1rem;
    font-size: 1.2em;
    transition: transform .35s ease-in-out;
    display: flex;
    position: fixed;
    top: 0;
    left: 0;
    transform: translate(100%);
    overflow-y: auto;
    max-height: 100vh;
    opacity: 0;
    font-family: var(--header-font);
}

#mobile-menu.open {
    display: block;
    transform: translate(0);
    opacity: 1;
}

/* indent nested list */
#mobile-menu ul ul {
    padding-top: .7rem;
    padding-left: 3.3rem;
}

#mobile-menu a.active {
    background-color: var(--pico-code-background-color);
}

#mobile-menu header {
    justify-content: space-between;
    flex-direction: row;
    /* width: 100%; */
    padding: 1rem;
    display: flex;
    font-size: 2rem;
}

/* hide scrollbars of page behind mobile menu */
body.no-scroll {
  overflow: hidden;
}

#close-btn {
    justify-content: center;
    align-items: center;
    width: 3rem;
    height: 3rem;
    display: flex;
    font-size: inherit;
}

/* really small sizes */
@media (max-width: 400px) {
    .title svg {
      display: none;
    }
    .container {
        max-width: 530px;
        padding-right: 0px;
        padding-left: 0px;
    }
    article {
        box-shadow: none;
    }
    footer, .maingrid header, article {
        padding-left: 13px;
        padding-right: 13px;
    }
}

